# EGL

EGL/: CMakeLists.txt  LICENCE.txt  README.txt
EGL/example/: main.cpp
EGL/include/KHR/: khrplatform.h
EGL/src/: egl.c  egl_common.c  egl_internal.h  egl_windows.c  egl_x11.c
